# clinical-nlp

./: .gitignore  CITATION.cff  README.md  api.Dockerfile  cardio-label-studio.yaml  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
annotation-interface/: cervical_interface.xml  cervical_interface_2.xml
artifacts/: README.md
artifacts/dockerfiles/: medspacy.dockerfile  radtext.dockerfile
data-collection/annotation-interface/: cardio_interface.xml  cervical_interface.xml
datasets/CHIA/: README.md
datasets/MIMIC-III/: README.md
datasets/bioscope_corpus/: README.md
datasets/cardio-oncology/: Cardiotoxicity Risk Model CHA.xlsx  Notes Strategy.docx  nlp_terms.csv  terms.csv
datasets/cervical/: NLP Labels.docx  cervical_labels.csv  terms.csv
datasets/i2b2/: README.md
datasets/sfu_review/: README.md
docs/cervical/: report.md
monitoring/: test-1_results.parquet  valid_results.parquet
monitoring/20240828/: test-1_results.csv  valid_results.csv
monitoring/20240829/: test-1_results.csv  test-1_results.parquet  (+2 more)
negbert/: Dockerfile  Multitask_Learning_of_Negation_and_Speculation.ipynb  README.md  transformers_for_negation_and_speculation.py
prompts/: prompt_v1.txt
resources/: cervical_rulebook.py
src/: batch_sampling.py  cardio_notebook.py  cardio_oncology.py  data_loader.py  download_models.py  extract_labels.py  llm_eval.py  llm_prompting.py  medspacy_pipeline.py  medspacy_pipeline_cervical.py  n_gram_analysis.py  pipeline.py  radtext_pipeline.py  sample_cervical_data.py  target_matcher.py  transfer_learning.py  utils.py
(+20 files in other folders)
