[project]
name = "assertion-medical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "litellm>=1.66.3",
    "lxml>=5.3.2",
    "matplotlib>=3.10.3",
    "medspacy>=1.3.1",
    "nltk>=3.9.1",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.7.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.49",
]
